# nvim

./: .editorconfig  .flake8  .gitignore  .gitmodules  .luacheckrc  .pre-commit-config.yaml  .projections.json  .stylua.toml  Makefile  README.md  clang-format  ginit.vim  global.vim  gvimrc  init.lua  init.vim  install.sh  man.lua  minimal.vimrc  plugins.md  plugins.vim  pylintrc  pyproject.toml  requirements.txt  ruff.toml  setting.toml  settings.toml  vimrc  ycm_extra_conf.py
.github/workflows/: autoformat.yml  codeql-analysis.yml  lint.yml  linux_nightly.yml  linux_stable.yml  macos_nightly.yml  macos_stable.yml  main.yml  windows_nightly.yml  windows_stable.yml
.resources/skeletons/: projections.json  skeleton.c  skeleton.html  skeleton.py  skeleton.sh  skeleton.vim  ycm_extra_conf.py
UltiSnips/: all.snippets  c.snippets  cpp.snippets  csh.snippets  gitcommit.snippets  lua.snippets  ps1.snippets  python.snippets  sh.snippets  snippets.snippets  tcsh.snippets  tex.snippets  vim.snippets  vimwiki.snippets
after/compiler/: black.lua  clang++.lua  clang-tidy.lua  clang.lua  flake8.lua  g++.lua  gcc.lua  gradle.lua  isort.lua  luacheck.lua  mypy.lua  plantuml.lua  pre-commit-run-all.lua  pre-commit-run.lua  pre-commit.lua  pycodestyle.lua  pylint.lua  ruff.lua  ruff_format.lua  shellcheck.lua  shfmt.lua  stylua.lua  typos.lua
after/ftdetect/: log.vim  nginx.vim  sh.vim  tmux.vim  xmp.vim
after/ftplugin/: TelescopePrompt.vim  c.lua  c.vim  cmake.lua  cpp.lua  cpp.vim  csh.vim  dosini.lua  dosini.vim  expect.lua  fzf.vim  git.lua  git.vim  gitcommit.lua  gitcommit.vim  gitconfig.vim  go.lua  go.vim  help.lua  help.vim  html.vim  java.vim  javascript.vim  json.lua  json.vim  kdl.lua  kdl.vim  log.lua  log.vim  lua.lua  lua.vim  make.lua  make.vim  man.lua  man.vim  markdown.vim  netrw.vim  plantuml.vim  ps1.vim  python.lua  (+24 more)
after/lsp/: basedpyright.lua  bashls.lua  ccls.lua  clangd.lua  copilot.lua  dockerls.lua  gopls.lua  jedi_language_server.lua  kotlin_language_server.lua  lua_ls.lua  pylsp.lua  pylyzer.lua  pyrefly.lua  robotframework_ls.lua  ruff.lua  rust_analyzer.lua  texlab.lua  ty.lua  vimls.lua  zls.lua
after/plugin/: abolish.vim  autocmds.lua  autocmds.vim  commands.lua  fugitive.vim  mappings.lua  mappings.vim  options.lua  semshi.vim  settings.vim  substitutions.vim  vnc.vim  youcompleteme.vim
after/syntax/: json.vim
autoload/: arglist.vim  autocmd.vim  filetypedetect.vim  gui.vim  has.vim  mappings.vim  neovim.vim  nvim.vim  os.vim  plugin.vim  plugins.vim  qf.vim  set.vim  setup.vim  tools.vim  vars.vim  vim.vim  vnc.vim  windows.vim
autoload/plugins/: chromatica_nvim.vim  completor_vim.vim  ctrlp_vim.vim  delimitmate.vim  denite_nvim.vim  deoplete_nvim.vim  echodoc_vim.vim  firenvim.vim  fruzzy.vim  fzf_vim.vim  gen_tags_vim.vim  git_messenger_vim.vim  gitv.vim  gonvim_fuzzy.vim  indent_blankline_nvim.vim  indentline.vim  iron_nvim.vim  iron_nvim.vim.vim  jedi_vim.vim  languageclient_neovim.vim  neco_vim.vim  neocomplcache_vim.vim  neocomplete_vim.vim  neomake.vim  neovim_colorcoder.vim  nerdcommenter.vim  nerdtree.vim  python_mode.vim  semshi.vim  simpleautocomplpop.vim  supertab.vim  syntastic.vim  tabular.vim  tagbar.vim  tcomment.vim  ultisnips.vim  vim-dispatch.vim  vim_abolish.vim  vim_airline.vim  vim_autoformat.vim  (+33 more)
config/UltiSnips/: c.snippets  cpp.snippets  ps1.snippets  python.snippets  tex.snippets  vim.snippets
config/plugin/: airline.vim  autoformat.vim  chromatica.vim  colorcoder.vim  cppenhanced.vim  ctrlp.vim  delimitmate.vim  denite.vim  deoplete.vim  easymotions.vim  echodoc.vim  fugitive.vim  gen_tags.vim  gonvimfuzzy.vim  grepper.vim  indentline.vim  iron.vim  javacomplete.vim  jedi.vim  languageclient.vim  lion.vim  markdown.vim  neco.vim  neocomplcache.vim  neocomplete.vim  neomake.vim  nerdcommenter.vim  nerdtree.vim  projectile.vim  pymode.vim  search.vim  semshi.vim  sessions.vim  signature.vim  signify.vim  simpleautocomplpop.vim  surround.vim  syntastic.vim  tabular.vim  tagbar.vim  (+7 more)
config/snippets/: vim.snippets
docs/: requirements.txt
ftdetect/: conf.vim  dosini.vim  gitconfig.vim  h.vim  in.vim  log.vim  lua.vim  nginx.vim  pkg.vim  plantuml.vim  python.vim  sh.vim  si.vim  sle.vim  tmux.vim  toml.vim  txt.vim  xml.vim  xmp.vim
ftplugin/: c.vim  cpp.vim  csh.vim  git.vim  gitcommit.vim  help.vim  java.vim  log.vim  make.vim  man.vim  markdown.vim  netrw.vim  python.vim  qf.vim  sh.vim  tex.vim  text.vim  vim-plug.vim  vim.vim  vimwiki.vim  zsh.vim
lsp/: basedpyright.lua  bashls.lua  clangd.lua  dockerls.lua  gopls.lua  jedi_language_server.lua  kotlinls.lua  lua_ls.lua  pylsp.lua  pylyzer.lua  ruff.lua  rust_analyzer.lua  texlab.lua  vimls.lua
lua/: colors.lua  config.lua  floating.lua  globals.lua  grep.lua  helper.lua  mappings.lua  messages.lua  nvim.lua  python.lua  setup.lua  stack.lua  sys.lua  watch_files.lua
lua/async/: init.lua
lua/cli/: argparse.lua  init.lua  logger.lua
lua/completions/: init.lua  (+2 more)
plugin/: abbrevations.vim  abbreviations.vim  airline.vim  autocmds.lua  autocmds.vim  autoformat.vim  bdelete.vim  colors.vim  commands.lua  completor.vim  ctrlp.vim  delimate.vim  deoplete.vim  easymotions.vim  expandregion.vim  filetypes.lua  fugitiv.vim  gitgutter.vim  gitv.vim  grepper.vim  indentline.vim  lsp.lua  lua.vim  mappings.lua  mappings.vim  move.vim  neocomplcache.vim  neomake.vim  nerdcommenter.vim  nerdtree.vim  options.lua  plugins.vim  plugins_config.vim  plugins_settings.vim  sessions.vim  settings.vim  signature.vim  signify.vim  simpleautocomplpop.vim  snipmate.vim  (+9 more)
skeletons/: Makefile  clang-format  clang-tidy  compile_flags.txt  flake8  main.c  main.cpp  main.go  pre-commit-config.yaml  projections.json  pyproject.toml  skeleton.c  skeleton.cpp  skeleton.go  skeleton.h  skeleton.hpp  skeleton.java  skeleton.py  skeleton.sh  skeleton.vim  stylua.toml  ycm_extra_conf.py
spell/: en.utf-8.add  en.utf-8.add.spl  es.utf-8.add  es.utf-8.add.spl
syntax/: log.vim
test/: lint.sh  min.lua  requirements.txt  test.ps1  test.sh
tests/: lint.sh  min.lua  test.ps1  test.sh
(+257 files in other folders)
