[project]
name = "dotvim"
version = "0.2"
description = "Neovim/Vim's config files"
readme = "README.md"
authors = [{ name = "mike325", email = "mike325@users.noreply.github.com" }]
license = { text = "MIT" }

[tool.ruff]
target-version = "py38"
line-length = 120
indent-width = 4

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "C90",
    "E",   # pycodestyle
    "ERA",
    "F",   # Pyflakes
    "PGH",
    "PL",
    "RUF",
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    # "I",   # isort
]

ignore = [
    "E203",     # Whitespace before :
    "E226",     # Whitespace around operators
    "E231",     # Missing whitespace after ,
    "E261",     # 2 spaces before inline comment
    "E262",     # Comments should start with      #
    "E265",     # Block comment should start with #
    "E402",     # module level import not at top file
    "ERA001",   # Comented code
    "PLC0415",  # `import` should be at the top-level of a file
    "PLW0602",  # Using global for but no assignment is done
    "PLW0603",  # Using the global statement to update `_has_colors` is discouraged
    # "UP006",  # Use `list` instead of `List`
]

unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "system-library",
    "third-party",
    "component",
    "first-party",
    "local-folder"
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 20.
max-complexity = 20

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py38']
# include = '\.pyi?$'
exclude = '''
    (
    /(
        \.eggs       # exclude a few common directories in the
        | \.git          # root of the project
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
    )/
    )
'''

[tool.mypy]
python_version = "3.8"
# sqlite_cache = true
# check_untyped_defs = true
# disallow_any_generics = true
# disallow_incomplete_defs = true
# disallow_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unreachable = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
# follow_imports = "silent"  # {normal,silent,skip,error}

# mypy per-module options:
# [[tool.mypy.overrides]]
# module = "mycode.foo.*"
# disallow_untyped_defs = true
